Make changes for resubmission

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -260,7 +260,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "I would say that the model successfully captured the variation of the target variable because it has a R2 score very close to 1 (0.923). That means that the dependent variable can be predicted from the independent variable pretty well."
+    "I would say that the model successfully captured the variation of the target variable because it has a R2 score very close to 1 (0.923). That means that the dependent variable can be predicted from the independent variable pretty well. R2 score is a measure of explained variation / total variation.  100% indicates that the model explains all the variability of the response data around its mean. Since this is close to 100, it is a pretty good score. The score has the residuals (y_i-y^) as part of the calculation so it is measuring how close the points are to the line. One thing to keep an eye out for in general is that the R2 score cannot determine whether the coefficient estimates and predictions are biased, which is why you must assess the residual plots to really check it. Even a high R2 score can systematically under and over predict the data (bias) along the curve."
    ]
   },
   {
@@ -483,7 +483,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "The Grid Search technique is a way to search for the optimal hyperparameters by doing an exhaustive cross-validated grid search over them for a given estimator. The grid entails a list of reasonable values for each hyperparameter that we want to search over and then it will evaluate/score each combination of the hyperparameter values to find the best estimator. This can optimize a learning algorithm by making sure we are tuning the model with the right hyperparameter values. One example of a hyperparameter in the model would be the max_depth that we have been playing around with."
+    "The Grid Search technique is a way to search for the optimal hyperparameters by doing an exhaustive cross-validated grid search over them for a given estimator. The grid entails a list of reasonable values for each hyperparameter that we want to search over and then it will evaluate/score each combination of the hyperparameter values to find the best estimator. For example, if there were 2 parameters with 3 values each, we would have a 2x3 grid. The inputs to the grid search are the lists of possible hyperparameter values that we want to search over, and the output is the estimator with the hyperparameter combination that has the best performance based on a specified scorer. It also requires a scoring function to be able to differentiate between the different combinations. These are the sklearn.metrics.accuracy_score for classification and sklearn.metrics.r2_score for regression by default but can be changed to other things. This can optimize a learning algorithm by making sure we are tuning the model with the right hyperparameter values. One example of a hyperparameter in the model would be the max_depth that we have been playing around with."
    ]
   },
   {
@@ -506,7 +506,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "In k-fold cross validation, the original data is separated into k equal sized subsamples. A single subsample is held out as a validation set, while the other k-1 sets are used for training. The cross-validation process is repeated k-times, each time with a different set used for validation. The k-results are then averaged and used as an estimation. The benefit for this is that the grid search cross validation phase can be sure that the data split was not done in a weird way that could have completely biased the scoring in any way.  k-fold cross validation gives a good generalization of the score of the model for many different test/training splits."
+    "In k-fold cross validation, the original data is split into training and testing data and then the training data is separated into k equal sized subsamples. A single subsample is held out as a validation set, while the other k-1 sets are used for training. The cross-validation process is repeated k-times, each time with a different set used for validation. The k-results of the cross-validation score are then averaged and used as an estimation of the performance of the mmodel. The benefit for this is that the grid search cross validation phase can be sure that the data split was not done in a weird way that could have completely biased the scoring in any way.  k-fold cross validation gives a good generalization of the score of the model for many different cross validation/training splits.  Once we have selected the best parameters using gridSearch along with k-fold cross-validation, we will use the test set to check the final performance of the model."
    ]
   },
   {
@@ -673,13 +673,29 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
+    "Statistics for Boston housing dataset:\n",
+    "\n",
+    "* Minimum price: $105000.0\n",
+    "\n",
+    "* Maximum price: $1024800.0\n",
+    "\n",
+    "* Mean price: $454342.9447852761\n",
+    "\n",
+    "* Median price $438900.0\n",
+    "\n",
+    "* Standard deviation of prices: $165171.13154429477\n",
+    "\n",
     "* Predicted selling price for Client 1's home: $403,025.00\n",
     "\n",
     "* Predicted selling price for Client 2's home: $237,478.72\n",
     "\n",
     "* Predicted selling price for Client 3's home: $931,636.36\n",
     "\n",
-    "This makes sense to me that Client 2 has the lowest value because they have the highest poverty level, high student-teacher ratio, and low number of rooms. This is in high contrast to the very large house that Client 3 has with very little poverty, and a great student-teacher ratio."
+    "For Client 1, the price is relatively close (though lower) to the mean price of the neighborhood (450k). Out of the three clients, this one does have most of the middle values for each attribute of rooms, poverty level, and student/teacher ratio so it makes sense that this client has the middle price as well between the three clients.\n",
+    "\n",
+    "This makes sense to me that Client 2 has the lowest value because they have the highest poverty level, high student-teacher ratio, and low number of rooms. Each of the three values of rooms (4), poverty percentage (32 percent), and student to teacher ratio (22:1) are all in the trending downwards value direction since fewer rooms means smaller, higher poverty percentage means poorer, and higher student to teacher ratio means less 1:1 time for each student. Still, 4 rooms is quite a lot and so it wasn't quite at the lowest price point of (105k). It is more than one standard deviation (165k) away from the mean/median prices (454k, 438k) so assuming a Gaussian distribution, it is in the bottom ~15 percent compared to the rest of the neighborhood in terms of overall value. \n",
+    "\n",
+    "Client 3 has the highest value because they are on the exact opposite spectrum from Client 2. Client 3 has the very large house with very little poverty in the neighborhood, and a great student-teacher ratio. The price is actually near the max value (1m) and is one of the highest value houses in the neighborhood since it is way above the mean (454k) by more than 2 standard deviations. The 8 rooms are double of Client 2's house size so it is easy to see why it is worth so much.  "
    ]
   },
   {
